[package]
name = "harper-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
# Use a relative path to the harper-core crate
harper-core = { path = "../harper-core" }
# Add the actix-cors crate for handling CORS
actix-cors = "0.7.0"

# --- Dependencies for AI & Combined Analysis ---
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
strsim = "0.11.0"
dotenvy = "0.15"
